<resources>
    <string name="app_name">adfmp1h23-waste</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="search_fragment_label">Search Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="profileTab">Профиль</string>
    <string name="searchTab">Поиск</string>
    <string name="tasksTab">Задания</string>
    <string name="homeTab">Домой</string>
    <string name="secondHelloText">Пора собирать мусор</string>
    <string name="instructionHeader">Инструкция и информация</string>
    <string name="creators"> Приложение создали: Афанасьев Андрей, Силкин Владислав, Михаил Прокофьев</string>
    <string name="tasksText">Выберите корзину для мусора</string>
    <string name="searchHint">Поиск</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="authorizationField">Авторизация</string>
    <string name="authButton">Войти</string>
    <string name="firstHelloText">Привет!</string>
    <string name="registrationInvite">Регистрация</string>
    <string name="registrationButton">Зарегистрироваться</string>
    <string name="description_string">123</string>
    <string name="title_string">1</string>
    <string name="trashtext_string"> Бутылка пластиковая </string>
    <string name="search_string"> Поиск </string>
    <string name="searchvalue_string">14</string>
    <string name="tasks_string"> Задания </string>
    <string name="tasksvalue_string">94</string>
    <string name="usingsince_string"> В приложении с 21.03.2052</string>
    <string name="username_string"> Здравствуй, пользователь </string>
    <string name="profiletext_string"> Профиль </string>
    <string name="notifications_string"> Напоминания </string>
    <string name="notificationtext_string"> Напоминания </string>
    <string name="notificationswitch_ek1_string"> Включить напоминания </string>
    <string name="weekday_string"> Понедельник </string>
    <string name="notificationweekdays_ek1_string"> Дни напоминаний</string>
    <string name="notificationtime_ek1_string"> Время напоминаний </string>
    <string name="notificationtimeset_string">7:30 PM</string>
    <string name="tabbuttontext_string">Текст</string>
    <string name="login_string">Войти</string>
    <string name="fieldtextinput_string">Параметр</string>
    <string name="fieldtextpropertyname_string">Ввод</string>
    <string name="nameField">Имя</string>
    <string name="emailField">Почта</string>
    <string name="passwordHint">Пароль</string>
    <string name="repeatPasswordHint">Повторите пароль</string>
    <string name="emailFieldAuth">Почта</string>
    <string name="passwordHintAuth">Пароль</string>
    <string name="instructionheader_string"> Инструкция и информация </string>
    <string name="searchheader_string"> Поиск </string>
    <string name="edittextsearch_string"> Введите название предмета </string>
    <string name="buttonNextTask">Следующее задание</string>
    <string name="about">About</string>
    <string name="back">back</string>
    <string name="button_instruction">button instruction</string>
    <string name="home_topbar_greeting_slogan_string">  Пора собирать мусор!</string>
    <string name="home_topbar_greeting_name_string"> Привет, Андрей!</string>
    <string name="sketch_ek1_string">Достижение</string>
    <string name="_10_hours__19_lessons_string">Выполнено 50 из 365</string>
    <string name="_25__string"> </string>
    <string name="mark_instruction_icon">mark_instruction_icon</string>
    <string name="circle_instruction_icon">circle_instruction_icon</string>
    <string name="path_108">path_108</string>
    <string name="path_109">path_109</string>
    <string name="path_110">path_110</string>
    <string name="path_5">path_5</string>
    <string name="path_6">path_6</string>
    <string name="path_7">path_7</string>
    <string name="path_8">path_8</string>
    <string name="path_9">path_9</string>
    <string name="path_10">path_10</string>
    <string name="mask_group">mask_group</string>
    <string name="mask_group_ek1">mask_group_ek!</string>
    <string name="path_14">path_14</string>
    <string name="background_ek3">background_ek3</string>
    <string name="register_string">Зарегистрироваться</string>
    <string name="vector_14">Вектор</string>
    <string name="stroke_1">stroke_!</string>
    <string name="stroke_2">stroke_2</string>
    <string name="stroke_3">stroke_3</string>
    <string name="stroke_4">stroke_4</string>
    <string name="home_topbar_background">home_topbar_background</string>
    <string name="_123">123</string>
    <string name="file">file</string>
    <string name="vector_15">vector_15</string>
    <string name="background">background</string>
    <string name="knob">knob</string>
    <string name="polygon_6">polygon_6</string>
    <string name="calendar_ek1">calendar_ek!</string>
    <string name="tabbuttonvector">tabbuttonvector</string>
    <string name="completed">\"Выполнено \"</string>
    <string name="_from_">\" из \"</string>
    <string name="correct">Верно!</string>
    <string name="incorrect">Неверно!</string>
    <string name="select_garbage_bag">Выберите корзину для мусора</string>
    <string name="Information">Приложение направлено на помощь пользователям с обучением в разделении мусора: В разделе тренировки можно выполнить задание по выбору мусорной корзины, в которую необходимо отправить мусор</string>
</resources>
