<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		frame_6
	 *	@date 		Monday 27th of February 2023 08:25:59 PM
	 *	@title 		page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/frame_6" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_frame_6_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

<!--				<View   android:id="@+id/_bg__frame_6_ek2"-->
<!--					android:background="@drawable/_bg__frame_6_ek2_shape"-->
<!--					 android:layout_marginStart="0dp"-->
<!--					android:layout_marginTop="0dp"-->
<!--					android:layout_width="396dp"-->
<!--					android:layout_height="225dp" />-->


				<RelativeLayout android:id="@+id/frame_12963"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout
						android:id="@+id/frame_8"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="18dp"
						android:layout_marginTop="56dp">

						<ImageView
							android:id="@+id/back"
							android:layout_width="17.68dp"
							android:layout_height="14.32dp"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:contentDescription="@string/vector_15"
							android:src="@drawable/vector_14" />

					</RelativeLayout>

					<TextView
						android:id="@+id/notificationtext"
						android:layout_width="208dp"
						android:layout_height="49dp"
						android:layout_marginStart="47dp"
						android:layout_marginTop="47dp"
						android:fontFamily="@font/relay_poppins_regular"
						android:text="@string/notificationtext_string"
						android:textColor="@color/notification_text_color"
						android:textSize="24sp"
						android:textStyle="bold" />

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/notificationswitch"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="66dp"
					android:layout_marginTop="110dp">


					<RelativeLayout
						android:id="@+id/group_12785"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="240dp"
						android:layout_marginTop="5dp">


						<RelativeLayout
							android:id="@+id/toggle__iphone_"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp">

							<ImageView
								android:id="@+id/background"
								android:layout_width="51dp"
								android:layout_height="31dp"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:contentDescription="@string/background"
								android:src="@drawable/background" />

							<ImageView
								android:id="@+id/knob"
								android:layout_width="27dp"
								android:layout_height="27dp"
								android:layout_marginStart="22dp"
								android:layout_marginTop="3dp"
								android:contentDescription="@string/knob"
								android:src="@drawable/knob" />

						</RelativeLayout>

					</RelativeLayout>

					<TextView
						android:id="@+id/notificationswitch_ek1"
						android:layout_width="253dp"
						android:layout_height="34dp"
						android:layout_gravity="center_horizontal|center"
						android:layout_marginStart="0dp"
						android:layout_marginTop="6dp"
						android:fontFamily="@font/relay_cabin_regular"
						android:text="@string/notificationswitch_ek1_string"
						android:textColor="@color/_bg__frame_6_ek2_color"
						android:textSize="16sp" />

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/notificationweekdays"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="66dp"
					android:layout_marginTop="160dp">


					<RelativeLayout
						android:id="@+id/frame_25"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="184dp"
						android:layout_marginTop="0dp">

						<TextView
							android:id="@+id/weekday"
							android:layout_width="122dp"
							android:layout_height="29.5dp"
							android:layout_gravity="center_horizontal|center"
							android:layout_marginStart="8dp"
							android:layout_marginTop="8dp"
							android:fontFamily="@font/relay_poppins_regular"
							android:gravity="center"
							android:text="@string/weekday_string"
							android:textColor="@color/_bg__frame_6_ek2_color"
							android:textSize="13sp" />

						<ImageView
							android:id="@+id/polygon_6"
							android:layout_width="10dp"
							android:layout_height="8dp"
							android:layout_marginStart="126dp"
							android:layout_marginTop="16dp"
							android:contentDescription="@string/polygon_6"
							android:src="@drawable/polygon_6" />

					</RelativeLayout>

					<TextView
						android:id="@+id/notificationweekdays_ek1"
						android:layout_width="185dp"
						android:layout_height="31dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="8dp"
						android:fontFamily="@font/relay_cabin_regular"
						android:text="@string/notificationweekdays_ek1_string"
						android:textColor="@color/_bg__frame_6_ek2_color"
						android:textSize="16sp" />

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/notificationtime"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="66dp"
					android:layout_marginTop="210dp">

					<TextView
						android:id="@+id/notificationtime_ek1"
						android:layout_width="185dp"
						android:layout_height="31dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="10dp"
						android:fontFamily="@font/relay_cabin_regular"
						android:text="@string/notificationtime_ek1_string"
						android:textColor="@color/_bg__frame_6_ek2_color"
						android:textSize="16sp" />


					<RelativeLayout
						android:id="@+id/frame_25_ek1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="184dp"
						android:layout_marginTop="0dp">

						<TextView
							android:id="@+id/notificationtimeset"
							android:layout_width="138dp"
							android:layout_height="29.5dp"
							android:layout_gravity="center_horizontal|center"
							android:layout_marginStart="8dp"
							android:layout_marginTop="10dp"
							android:fontFamily="@font/relay_poppins_regular"
							android:gravity="center"
							android:text="@string/notificationtimeset_string"
							android:textColor="@color/_bg__frame_6_ek2_color"
							android:textSize="13sp" />

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>