<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		home_topbar
	 *	@date 		Wednesday 22nd of March 2023 02:09:53 PM
	 *	@title 		page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->

	<ImageView android:id="@+id/home_topbar_background"
		android:src="@drawable/home_topbar_background"
		android:contentDescription="@string/home_topbar_background"
		android:layout_marginStart="0dp"
		android:layout_marginTop="0dp"
		android:layout_width="414dp"
		android:layout_height="218dp" />

	<TextView android:id="@+id/home_topbar_greeting_slogan"
		android:fontFamily="@font/relay_asap_regular"
		android:textSize="34sp"
		android:textColor="@color/home_topbar_greeting_slogan_color"
		android:layout_marginStart="23dp"
		android:layout_marginTop="137dp"
		android:layout_width="417dp"
		android:layout_height="82dp"
		android:text="@string/home_topbar_greeting_slogan_string"
		/>

	<TextView
		android:id="@+id/home_topbar_greeting_name"
		android:layout_width="406.39999961853dp"
		android:layout_height="74.39999961853dp"
		android:layout_marginStart="23dp"
		android:layout_marginTop="95dp"
		android:fontFamily="@font/relay_asap_regular"
		android:text="@string/home_topbar_greeting_name_string"
		android:textColor="@color/home_topbar_greeting_slogan_color"
		android:textSize="25sp" />


</RelativeLayout>